Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBXNEXT-319] multirow inserts are now used for PostgreSQL 8.2 and higher (asaveljevs)
 - [ZBXNEXT-392] our daemons no longer crash after "strace -p" (asaveljevs)
 - [ZBXNEXT-138] our daemons can now listen on multiple IPs, see ListenIP configuration parameter (asaveljevs)
 - [ZBX-2031] fixed comparison of empty strings with Oracle that led to duplicate rows in dservices (asaveljevs)
 - [ZBX-2409] fixed server crash when deleting unreachable hosts in discovery (asaveljevs)
 - [DEV-461] changes in GUI configuration menu (Aly)
 - [ZBX-2473] fixed timescroll most right position when "now" (Aly)
 - [ZBX-1193] improved macros form (Vedmak)
 - [ZBX-2035] fixed host full cloning (Vedmak)
 - [ZBX-1986] fixed empty Y axis if item values are zeros (Aly)
 - [ZBX-2492] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-1357] update Hungarian translation; thanks to Laszlo Szabo (Richlv)
 - [ZBX-2489] fixed server crash when receiving data using the old protocol (asaveljevs)
 - [ZBX-2474,ZBXNEXT-378] fixed page refresh on filter change, now all filters hiding and showing works without refresh (Maxim Andruhovich / AM)
 - [ZBX-2488] changed filter from Web Monitoring to External Check (Maxim Andruhovich / AM)
 - [ZBX-2483] fixed showing latest data by filter when clicking from dashboard with GUI option 'Dropdown first entry' -> None (Maxim Andruhovich/AM)
 - [ZBX-1529] fixed macros expand to nothing in templates (Vedmak)
 - [ZBX-2461] fixed complex bugs with trigger expressions (Maxim Andruhovich / AM)
 - [ZBX-1357] updated German translation; thanks to Peter Schultz (Richlv)
 - [ZBX-2319] fixed escaping locales on download (Aly)
 - [ZBX-2460] fixed auto adding host group to updated host (Aly)