@@ -5,4 +5,4 @@ noinst_LIBRARIES = libzbxserver.a
 libzbxserver_a_SOURCES = \
 	functions.c \
 	evalfunc.c evalfunc.h \
-	expression.c expression.h
+	expression.c
