@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2011] plain ASCII subjects are no longer base64-encoded, fixes issues with email to SMS gateways (asaveljevs)
  - [ZBXNEXT-319] multirow inserts are now used for PostgreSQL 8.2 and higher (asaveljevs)
  - [ZBXNEXT-392] our daemons no longer crash after "strace -p" (asaveljevs)
  - [ZBXNEXT-138] our daemons can now listen on multiple IPs, see ListenIP configuration parameter (asaveljevs)
